--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -105,3 +105,22 @@
 	background-image: linear-gradient(to right, #1E1E1E, #1E1E1E), linear-gradient(90deg, rgba(255, 255, 255, .15), rgba(255, 255, 255, 0));
 	border-radius: .12rem;
 }
+
+.kinko-selection-white {
+	color: #fff !important;
+    .ant-select-selector{
+		color: #fff;
+		background: #1E1E1E !important;
+		border: 1px solid rgba(255, 255, 255, 1) !important;
+		height: auto;
+		line-height: normal;
+		font-size: 0.2rem;
+		border-radius: .1rem;
+    }
+	.ant-select-selection__rendered {
+		line-height: .35rem;
+	}
+	.ant-select-arrow {
+		color: #fff;
+	}
+}
