--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -105,6 +105,24 @@
 	background-image: linear-gradient(to right, #1E1E1E, #1E1E1E), linear-gradient(90deg, rgba(255, 255, 255, .15), rgba(255, 255, 255, 0));
 	border-radius: .12rem;
 }
+.kinko-selection{  //给该select框加的className
+	color: #fff !important;
+    .ant-select-selector{
+		color: #fff;
+		background: #1E1E1E !important;
+		border: 1px solid rgba(255, 255, 255, .15) !important;
+		height: auto;
+		line-height: normal;
+		font-size: 0.16rem;
+		border-radius: .1rem;
+    }
+	.ant-select-selection__rendered {
+		line-height: .3rem;
+	}
+	.ant-select-arrow {
+		color: #999;
+	}
+}
 
 .kinko-selection-white {
 	color: #fff !important;
@@ -123,4 +141,7 @@
 	.ant-select-arrow {
 		color: #fff;
 	}
+}
+.ant-select-single.ant-select-open .ant-select-selection-item {
+	color: #fff !important;
 }
