--- a/src/pages/Home/CenterBottom/index.scss
+++ b/src/pages/Home/CenterBottom/index.scss
@@ -6,7 +6,7 @@
         display: flex;
         justify-content: center;
         position: absolute;
-        bottom: 0;
+        bottom: .2rem;
         left: 0;
         z-index: 10;
         color: #fff;
