--- a/src/pages/Home/CenterTop/index.scss
+++ b/src/pages/Home/CenterTop/index.scss
@@ -1,10 +1,17 @@
 .center-top {
     position: relative;
+    .right {
+        position: absolute;
+        right: 0;
+        top: 0;
+        z-index: 99;
+    }
 }
 .kiko-date {
     position: absolute;
     bottom: .05rem;
     left: 0;
+    z-index: 1;
     input {
         text-align: center;
         color: #ccc !important;
