--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -1,3 +1,11 @@
+.bg {
+    background: url("../../assets/pageBg.png") no-repeat;
+	background-color: #262626;
+	background-size: 100% 100%;
+	background-position: 10px 200px;
+	overflow: hidden;
+    color: #fff;
+}
 .select {
 	width: 25%;
 	.el-input {
