--- a/src/components/LeftMenu/index.scss
+++ b/src/components/LeftMenu/index.scss
@@ -57,4 +57,10 @@
 			vertical-align: middle; 
 		}
     }
+	:global {
+		.ant-menu-dark {
+			color: rgba(255, 255, 255, .4);
+			background: #f00;
+		}
+	}
 }
