--- a/src/pages/Home/LeftCenter/index.scss
+++ b/src/pages/Home/LeftCenter/index.scss
@@ -1,10 +1,9 @@
 .left-center {
-    padding: 0 .2rem;
     font-size: .16rem;
     .top {
 		justify-content: space-between;
 		align-items: center;
-		margin: .12rem .2rem 0 0;
+		margin: .1rem .2rem 0 0;
 		.title {
 			color: #fff;
 		}
@@ -30,7 +29,11 @@
 			}
 		}
 	}
+	.total {
+		padding: 0 .2rem;
+	}
     &-list {
+		padding: 0 .2rem;
         height: 80%;
         overflow: auto;
         .kiko-progress {
