--- a/src/pages/Foot/List/index.scss
+++ b/src/pages/Foot/List/index.scss
@@ -124,4 +124,15 @@
 			align-items: center;
 		}
 	}
+    .action {
+        span {
+            margin-left: .2rem;
+            &:first-child {
+                margin-left: 0;
+            }
+        }
+    }
+    .theme-color {
+        color: #0BCFC8;
+    }
 }
