--- a/src/pages/Foot/ParkType/index.scss
+++ b/src/pages/Foot/ParkType/index.scss
@@ -16,31 +16,43 @@
 		width: 70%;
 		margin: auto;
 		margin-top: .8rem;
-		// .park-type-tab-content {
-		// 	margin-top: .1rem;
-		// 	display: flex;
-		// 	justify-content: space-between;
-		// 	&-left {
-		// 		flex: 1;
-		// 		padding-left: .1rem;
-		// 		&-title {
-		// 			font-size: .26rem;
-		// 		}
-		// 		&-content {
-		// 			margin-top: .3rem;
-		// 		}
-		// 	}
-		// 	&-right {
-		// 		margin-left: .5rem;
-		// 		width: 60%;
-		// 		.img {
-		// 			width: 100%;
-		// 			height: 100%;
-		// 		}
-		// 	}
-		// }
+		.park-type-tab-content {
+			margin-top: .1rem;
+			display: flex;
+			justify-content: space-between;
+			&-left {
+				flex: 1;
+				padding-left: .1rem;
+				&-title {
+					font-size: .26rem;
+				}
+				&-content {
+					margin-top: .3rem;
+				}
+			}
+			&-right {
+				margin-left: .5rem;
+				width: 60%;
+				.img {
+					width: 100%;
+					height: 100%;
+				}
+			}
+		}
         .ant-tabs {
             color: #fff;
         }
+		.customLabelColor {
+			color: #fff;
+			font-size: .2rem;
+		}
+		.ant-tabs-tab-active .customLabelColor {
+			color: #0bcfc8;
+		}
+		.ant-tabs-nav .ant-tabs-tab-active {
+			border-bottom: 1px solid #0bcfc8 !important;
+		}
+		
 	}
+	
 }
